[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/font/GlacialIndifference-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/font/Glacial_trackname.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/userinterface/jukebox_group_buttons.tres" type="ButtonGroup" id=3]
[ext_resource path="res://src/userinterface/Jukebox.gd" type="Script" id=4]
[ext_resource path="res://src/userinterface/jukebox_track_buttons.tres" type="ButtonGroup" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 5
outline_color = Color( 0.752941, 0.188235, 0.188235, 1 )
extra_spacing_char = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[node name="Jukebox" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="BlackOverlay"]
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 1395.82, -136.361 )
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="BlackOverlay"]
anchor_left = 0.2
anchor_top = 0.15
anchor_right = 0.8
anchor_bottom = 0.85
margin_left = -0.663391
margin_top = -0.307373
margin_right = -0.663391
margin_bottom = -0.307373
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLabel" type="Label" parent="BlackOverlay/Background"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
custom_fonts/font = SubResource( 1 )
text = "Music Jukebox"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="BlackOverlay/Background"]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Border" type="ColorRect" parent="BlackOverlay/Background"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
color = Color( 0.588235, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="BlackOverlay/Background"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 22.0
margin_top = 22.0
margin_right = -22.0
margin_bottom = -22.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroupSelection" type="Control" parent="BlackOverlay/Background"]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy_0" type="Button" parent="BlackOverlay/Background/GroupSelection"]
anchor_right = 0.25
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.929412, 1 )
toggle_mode = true
shortcut_in_tooltip = false
pressed = true
group = ExtResource( 3 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal_1" type="Button" parent="BlackOverlay/Background/GroupSelection"]
anchor_left = 0.25
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.698039, 1, 0, 1 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 3 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard_2" type="Button" parent="BlackOverlay/Background/GroupSelection"]
anchor_left = 0.5
anchor_right = 0.75
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.407843, 0.231373, 1 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 3 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="System_3" type="Button" parent="BlackOverlay/Background/GroupSelection"]
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -5.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 3 )
text = "System"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSelection" type="Control" parent="BlackOverlay/Background"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyTracks" type="Control" parent="BlackOverlay/Background/MusicSelection"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="Button" parent="BlackOverlay/Background/MusicSelection/EasyTracks"]
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Strolling Without an Aim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Button" parent="BlackOverlay/Background/MusicSelection/EasyTracks"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Courageous Dive"

[node name="2" type="Button" parent="BlackOverlay/Background/MusicSelection/EasyTracks"]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Intergalactic Space Force"

[node name="3" type="Button" parent="BlackOverlay/Background/MusicSelection/EasyTracks"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Rider of the Galaxy"

[node name="4" type="Button" parent="BlackOverlay/Background/MusicSelection/EasyTracks"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Barefoot on Stardust"

[node name="NormalTracks" type="Control" parent="BlackOverlay/Background/MusicSelection"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="Button" parent="BlackOverlay/Background/MusicSelection/NormalTracks"]
anchor_right = 1.0
anchor_bottom = 0.167
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Hopelessly Lost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="Button" parent="BlackOverlay/Background/MusicSelection/NormalTracks"]
anchor_top = 0.167
anchor_right = 1.0
anchor_bottom = 0.334
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Nightsky"

[node name="7" type="Button" parent="BlackOverlay/Background/MusicSelection/NormalTracks"]
anchor_top = 0.334
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "In the Hopes of Meeting You"

[node name="8" type="Button" parent="BlackOverlay/Background/MusicSelection/NormalTracks"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.667
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Passing the Slow Days"

[node name="9" type="Button" parent="BlackOverlay/Background/MusicSelection/NormalTracks"]
anchor_top = 0.667
anchor_right = 1.0
anchor_bottom = 0.834
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Shooting Stars"

[node name="10" type="Button" parent="BlackOverlay/Background/MusicSelection/NormalTracks"]
anchor_top = 0.825
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Spending Time to Ponder"

[node name="HardTracks" type="Control" parent="BlackOverlay/Background/MusicSelection"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="11" type="Button" parent="BlackOverlay/Background/MusicSelection/HardTracks"]
anchor_right = 1.0
anchor_bottom = 0.2
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Galactic Menace"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="12" type="Button" parent="BlackOverlay/Background/MusicSelection/HardTracks"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "From Behind the Asteroid"

[node name="13" type="Button" parent="BlackOverlay/Background/MusicSelection/HardTracks"]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Scared of the Unknown"

[node name="14" type="Button" parent="BlackOverlay/Background/MusicSelection/HardTracks"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Blooming under Pressure"

[node name="15" type="Button" parent="BlackOverlay/Background/MusicSelection/HardTracks"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Onwards, my Odyssey!"

[node name="SystemTracks" type="Control" parent="BlackOverlay/Background/MusicSelection"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="16" type="Button" parent="BlackOverlay/Background/MusicSelection/SystemTracks"]
anchor_right = 1.0
anchor_bottom = 0.25
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Titlescreen Theme"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="17" type="Button" parent="BlackOverlay/Background/MusicSelection/SystemTracks"]
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Options Theme"

[node name="18" type="Button" parent="BlackOverlay/Background/MusicSelection/SystemTracks"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Gameover Theme"

[node name="19" type="Button" parent="BlackOverlay/Background/MusicSelection/SystemTracks"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
shortcut_in_tooltip = false
group = ExtResource( 5 )
text = "Credits Theme"

[node name="MusicVolumeLabel" type="Label" parent="BlackOverlay/Background"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 20.0
margin_top = -10.0
margin_right = -20.0
custom_fonts/font = ExtResource( 2 )
text = "Music Volume"
align = 1
valign = 2

[node name="BGM_Slider" type="HSlider" parent="BlackOverlay/Background"]
pause_mode = 2
process_priority = 1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 0.8
margin_left = 20.0
margin_right = -20.0
mouse_filter = 1
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 11
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX_Player" type="AudioStreamPlayer" parent="."]

[node name="BGM_Player" type="AudioStreamPlayer" parent="."]
[connection signal="pressed" from="BlackOverlay/Background/Cancel" to="." method="_toggle_open"]
[connection signal="value_changed" from="BlackOverlay/Background/BGM_Slider" to="." method="_adjust_bgm_volume"]
